[package]
name = "filesorter"
version = "0.1.0"
authors = ["Ali Yasir Naç <76746351+aliyasirnac@users.noreply.github.com>"]
edition = "2021"
build = "build.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = "0.4.33"
rfd = "0.13.0"
slint = "1.4"

[build-dependencies]
slint-build = "1.4"
